# rave

./: .env.example  .gitignore  .gitlab-ci.yml  .repomix.yaml  .scribeignore  .sops.yaml  BENCHMARKING.md  CITATION.cff  CLAUDE.md  COMPLETE-BUILD.md  Dockerfile  GITLAB-MATTERMOST-INTEGRATION.md  GOLDEN-PATH-DEMO-REPORT.md  INTEGRATION-STATUS.md  Justfile  LICENSE  NATS-IMPLEMENTATION-SUMMARY.md  NGINX-GITLAB-FIX-COMPLETE.md  NOTICE  P2-IMPLEMENTATION-SUMMARY.md  P3-IMPLEMENTATION-SUMMARY.md  P4-IMPLEMENTATION-SUMMARY.md  P6-IMPLEMENTATION-SUMMARY.md  P6-PRODUCTION-READY-SUMMARY.md  PRODUCTION-SECRETS-GUIDE.md  README.md  REFACTORING_TODO.md  REPOSITORY_CLEANUP_PLAN.md  TODO.md  WORKING-SETUP.md  add-https-to-rave.sh  ai-sandbox-config.nix  apps  build-vm-external.sh  build-vm.sh  build-vms.sh  check-gitlab-ready.sh  check_nginx.exp  default.nix  demo-https-config.nix  (+42 more)
.serena/: project.yml
archive/: fix-vm-config.sh  quick-gitlab-fix.sh  test-nginx.conf  test-p3-gitlab.sh  test-p4-matrix.sh  verify-nginx-fix.sh
auth-manager/: .env.example  README.md  go.mod
build-scripts/: install-nix-user.sh
cli/: README.md  cli.html  oauth_manager.py  platform_utils.py  rave  user_manager.py  vm_manager.py
config/: claude-config.json  mcp-config.json  rave.env  secrets.yaml  test-secrets.yaml
dashboards/: agent-performance.json  project-health.json  system-health.json
docs/: README.md  (+17 more)
src/apps/cli/: README.md  cli.html  oauth_manager.py  override_manager.py  platform_utils.py  provisioner.py  pyproject.toml  qemu_driver.py  rave  settings.py  ssh_client.py  vm_manager.py
(+335 files in other folders)
