[project]
name = "rave-cli"
version = "0.1.0"
description = "Command-line utilities for the RAVE virtual environment"
requires-python = ">=3.10"
dependencies = [
  "click>=8.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[tool.uv]
package = false
python-preference = "managed"
